rbx_types/src/attributes/snapshots/rbx_types__attributes__tests__round_trip_attributes-2.snap
---
source: rbx_types/src/attributes/mod.rs
expression: byte_string
---
f00060004e756d62657260000801cc8404000526563741c00803f000400040400080406000537472696e672d00048656c6c6f2c20776f726c64218000496e66696e6974796000000f07fd000436f6c6f7253657175656e63651930000000000000803f0000000000000003f000000803f0000000000803f0000000000803f30004e614e6000000f8ff7000566563746f723210002041004842e0004e756d62657253657175656e63651730000000000000803f00000003f0000000000803f00803f6000436f6c6f7233fa3a2223f000000803fa000427269636b436f6c6f72eec30050005544696d32a0003fa0003333333f1e00040005544696d90003f640007000426f6f6c65616e317000566563746f72331100803f00040004040b0004e756d62657252616e67651b00a040002041
